# python-can-sontheim

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black_format_check.yml  coveralls.yml  python-publish.yml  tox.yml
can_sontheim/: __init__.py  _canlib.py  canlib.py  constants.py  devices.py  interprocess communication.url  structures.py  version.py
examples/: sie_canfox_logger_example.py  sie_canfox_receive_multiple_example.py  sie_canfox_tx_example.py
test/: test_interface_sontheim.py
